fix(newsletter): input and button spacing

--- a/src/scss/components/_components.newsletter.scss
+++ b/src/scss/components/_components.newsletter.scss
@@ -8,7 +8,6 @@
  */
 
 .Newsletter {
-  @include margin-bottom(1);
   max-width: 1024px;
   margin: 0 7% 0 7%;
 }
@@ -31,7 +30,7 @@
   border-radius: 0;
   font-size: 0.8rem;
   height: 64px;
-  @include margin-top(0.25);
+  @include margin-top(0.5);
   outline: none;
   outline-style: none;
   padding: 0 16px;
@@ -56,7 +55,7 @@
 
 .NewsletterForm-button {
   flex-grow: 1;
-  @include margin-top(0.25);
+  @include margin-top(0.5);
 }
 
 @include breakpoint(md) {
